EngineCore/include/EngineAPI.h

	/* ── opaque handle ─────────────────────────────────────────── */
	typedef void* EngineContextHandle;
	/* ── entity handle ─────────────────────────────────────────── */
	typedef struct EntityId { uint32_t id; } EntityId;
	/// Submit a custom rendering callback at the specified layer
	ENGINE_API void Render_SubmitCustom(
		EngineContextHandle ctx,
		void (*callback)(void* userData),  ///< Custom render function
		void* userData,                    ///< User data passed to callback
		int layer,                         ///< Render layer
		int order                          ///< Order within layer
	);
	//=============================================================================
	// TILEMAP API
	//=============================================================================

	ENGINE_API EntityId Tilemap_Create(EngineContextHandle ctx, const char* name);
	ENGINE_API EntityId Tilemap_CreateLayer(
		EngineContextHandle ctx,
		EntityId tilemap,
		const char* layerName
	);
	ENGINE_API void Tilemap_SetTile(
		EngineContextHandle ctx,
		EntityId tilemapLayer,
		int tileX, int tileY,
		int tileId
	);
	ENGINE_API int Tilemap_GetTile(
		EngineContextHandle ctx,
		EntityId tilemapLayer,
		int tileX, int tileY
	);
	ENGINE_API int Tilemap_FloodFill(
		EngineContextHandle ctx,
		EntityId tilemapLayer,
		int startX, int startY,
		int newTileId
	);
	//=============================================================================
	// TILE PALETTE API
	//=============================================================================

	ENGINE_API int TilePalette_Create(
		EngineContextHandle ctx,
		const char* paletteName,
		const char* atlasPath,
		int tileWidth, int tileHeight
	);
	ENGINE_API void TilePalette_SetActive(EngineContextHandle ctx, int paletteId);
	ENGINE_API int TilePalette_GetActive(EngineContextHandle ctx);
	ENGINE_API int TilePalette_AddTile(
		EngineContextHandle ctx,
		int paletteId,
		int tileId,
		const char* tileName,
		const char* assetPath,
		int atlasX, int atlasY,
		int walkable,
		int collisionType
	);
	ENGINE_API int TilePalette_GetInfo(
		EngineContextHandle ctx,
		int paletteId,
		char* outName, int nameBufferSize,
		char* outAtlasPath, int atlasPathBufferSize,
		int* outTileWidth,
		int* outTileHeight,
		int* outColumns
	);
	ENGINE_API int TilePalette_GetTileCount(EngineContextHandle ctx, int paletteId);
	ENGINE_API int TilePalette_GetTileInfo(
		EngineContextHandle ctx,
		int paletteId,
		int tileIndex,
		int* outTileId,
		char* outTileName, int nameBufferSize,
		int* outAtlasX, int* outAtlasY,
		int* outWalkable,
		int* outCollisionType
	);
	ENGINE_API int TilePalette_Load(EngineContextHandle ctx, const char* palettePath);
	ENGINE_API int TilePalette_Save(EngineContextHandle ctx, int paletteId, const char* palettePath);
	ENGINE_API int TilePalette_GetSelectedTile(EngineContextHandle ctx);
	ENGINE_API void TilePalette_SetSelectedTile(EngineContextHandle ctx, int tileId);
	ENGINE_API void TileBrush_SetType(EngineContextHandle ctx, int brushType);
	ENGINE_API void TileBrush_SetSize(EngineContextHandle ctx, int size);
	ENGINE_API void TileBrush_SetBlendMode(EngineContextHandle ctx, int blendMode);
	ENGINE_API void TileBrush_SetRandomization(EngineContextHandle ctx, int enabled, float strength);
	ENGINE_API void TileBrush_SetOpacity(EngineContextHandle ctx, float opacity);
	ENGINE_API int TileBrush_GetSettings(
		EngineContextHandle ctx,
		int* outType,
		int* outSize,
		int* outBlendMode,
		float* outOpacity,
		int* outRandomEnabled,
		float* outRandomStrength
	);
	ENGINE_API int TileBrush_LoadPattern(EngineContextHandle ctx, const char* patternPath);
	ENGINE_API int TileBrush_SavePattern(EngineContextHandle ctx, const char* patternPath);
	//=============================================================================
	// TILE PAINTING API
	//=============================================================================

	ENGINE_API void TilePaint_Begin(
		EngineContextHandle ctx,
		EntityId tilemapLayer,
		int tileX, int tileY
	);
	ENGINE_API void TilePaint_Continue(
		EngineContextHandle ctx,
		EntityId tilemapLayer,
		int tileX, int tileY
	);
	ENGINE_API void TilePaint_End(EngineContextHandle ctx, EntityId tilemapLayer);
	ENGINE_API void TilePaint_PaintWithBrush(
		EngineContextHandle ctx,
		EntityId tilemapLayer,
		int tileX, int tileY
	);
	ENGINE_API int TilePaint_GetPreview(
		EngineContextHandle ctx,
		EntityId tilemapLayer,
		int tileX, int tileY,
		int* outTilePositions,
		int maxPositions
	);
	ENGINE_API int TilePaint_GetBrushPreview(
		EngineContextHandle ctx,
		EntityId tilemapLayer,
		int tileX, int tileY,
		int* outTilePositions,
		int maxPositions
	);
	ENGINE_API void TilePaint_PaintLine(
		EngineContextHandle ctx,
		EntityId tilemapLayer,
		int startX, int startY,
		int endX, int endY
	);
	ENGINE_API void TilePaint_PaintRectangle(
		EngineContextHandle ctx,
		EntityId tilemapLayer,
		int minX, int minY,
		int maxX, int maxY,
		int filled
	);
	ENGINE_API void TilePaint_PaintCircle(
		EngineContextHandle ctx,
		EntityId tilemapLayer,
		int centerX, int centerY,
		int radius,
		int filled
	);
	ENGINE_API int TilePaint_SampleTile(
		EngineContextHandle ctx,
		EntityId tilemapLayer,
		int tileX, int tileY
	);
	//=============================================================================
	// TILE LAYER OPERATIONS API
	//=============================================================================

	ENGINE_API int TilemapLayer_GetAllInTilemap(
		EngineContextHandle ctx,
		EntityId tilemap,
		uint32_t* outLayers,
		int maxCount
	);
	ENGINE_API int TilemapLayer_GetInfo(
		EngineContextHandle ctx,
		EntityId layer,
		char* outName, int nameBufferSize,
		int* outVisible,
		int* outLocked,
		float* outOpacity,
		int* outSortOrder
	);
	ENGINE_API void TilemapLayer_SetVisible(EngineContextHandle ctx, EntityId layer, int visible);
	ENGINE_API void TilemapLayer_SetLocked(EngineContextHandle ctx, EntityId layer, int locked);
	ENGINE_API void TilemapLayer_SetOpacity(EngineContextHandle ctx, EntityId layer, float opacity);
	ENGINE_API void TilemapLayer_SetSortOrder(EngineContextHandle ctx, EntityId layer, int sortOrder);
	ENGINE_API void TilemapLayer_Reorder(EngineContextHandle ctx, EntityId layer, int newSortOrder);
	ENGINE_API int TilemapLayer_GetPaintable(
		EngineContextHandle ctx,
		uint32_t* outLayers,
		int maxCount
	);
	ENGINE_API void TileLayer_CopyRegion(
		EngineContextHandle ctx,
		EntityId srcLayer,
		EntityId dstLayer,
		int srcMinX, int srcMinY,
		int srcMaxX, int srcMaxY,
		int dstX, int dstY
	);
	ENGINE_API void TileLayer_CopyToClipboard(
		EngineContextHandle ctx,
		EntityId layer,
		int minX, int minY,
		int maxX, int maxY
	);
	ENGINE_API void TileLayer_PasteFromClipboard(
		EngineContextHandle ctx,
		EntityId layer,
		int x, int y
	);
	ENGINE_API void TileLayer_BlendLayers(
		EngineContextHandle ctx,
		EntityId baseLayer,
		EntityId overlayLayer,
		int minX, int minY,
		int maxX, int maxY,
		float opacity
	);
	ENGINE_API void TileLayer_SetPalette(
		EngineContextHandle ctx,
		EntityId tilemapLayer,
		int paletteId
	);
	ENGINE_API int TileLayer_GetPalette(
		EngineContextHandle ctx,
		EntityId tilemapLayer
	);
	ENGINE_API void TileLayer_RefreshDefinitions(
		EngineContextHandle ctx,
		EntityId tilemapLayer
	);
	//=============================================================================
	// AUTO-TILING API
	//=============================================================================

	ENGINE_API int AutoTile_CreateRuleSet(EngineContextHandle ctx, const char* name);
	//=============================================================================
	// TILEMAP ANALYSIS API
	//=============================================================================

	ENGINE_API int Tilemap_GetBounds(
		EngineContextHandle ctx,
		EntityId tilemapLayer,
		int* outMinX, int* outMinY,
		int* outMaxX, int* outMaxY
	);
	ENGINE_API int Tilemap_CountTilesInRegion(
		EngineContextHandle ctx,
		EntityId tilemapLayer,
		int minX, int minY,
		int maxX, int maxY
	);
	ENGINE_API int Tilemap_FindTilePositions(
		EngineContextHandle ctx,
		EntityId tilemapLayer,
		int tileId,
		int* outPositions,
		int maxPositions
	);
	ENGINE_API int Tilemap_ReplaceTiles(
		EngineContextHandle ctx,
		EntityId tilemapLayer,
		int oldTileId,
		int newTileId,
		int minX, int minY,
		int maxX, int maxY
	);
	ENGINE_API void Engine_RunInContext(void (*fn)(void*), void* user);